Move all public headers into root of 'public'

--- a/r5dev/vproj/dedicated.vcxproj
+++ b/r5dev/vproj/dedicated.vcxproj
@@ -212,27 +212,28 @@
     <ClInclude Include="..\protoc\cl_rcon.pb.h" />
     <ClInclude Include="..\protoc\sv_rcon.pb.h" />
     <ClInclude Include="..\public\iengine.h" />
-    <ClInclude Include="..\public\include\client_class.h" />
-    <ClInclude Include="..\public\include\const.h" />
-    <ClInclude Include="..\public\include\edict.h" />
-    <ClInclude Include="..\public\include\globalvars_base.h" />
-    <ClInclude Include="..\public\include\icommandline.h" />
-    <ClInclude Include="..\public\include\iconcommand.h" />
-    <ClInclude Include="..\public\include\iconvar.h" />
-    <ClInclude Include="..\public\include\icvar.h" />
-    <ClInclude Include="..\public\include\inetchannel.h" />
-    <ClInclude Include="..\public\include\inetmsghandler.h" />
-    <ClInclude Include="..\public\include\iserver.h" />
-    <ClInclude Include="..\public\include\ivscript.h" />
-    <ClInclude Include="..\public\include\memaddr.h" />
-    <ClInclude Include="..\public\include\bansystem.h" />
-    <ClInclude Include="..\public\include\binstream.h" />
-    <ClInclude Include="..\public\include\httplib.h" />
-    <ClInclude Include="..\public\include\model_types.h" />
-    <ClInclude Include="..\public\include\module.h" />
-    <ClInclude Include="..\public\include\studio.h" />
-    <ClInclude Include="..\public\include\utility.h" />
-    <ClInclude Include="..\public\include\worldsize.h" />
+    <ClInclude Include="..\public\client_class.h" />
+    <ClInclude Include="..\public\const.h" />
+    <ClInclude Include="..\public\edict.h" />
+    <ClInclude Include="..\public\globalvars_base.h" />
+    <ClInclude Include="..\public\icommandline.h" />
+    <ClInclude Include="..\public\iconcommand.h" />
+    <ClInclude Include="..\public\iconvar.h" />
+    <ClInclude Include="..\public\icvar.h" />
+    <ClInclude Include="..\public\inetchannel.h" />
+    <ClInclude Include="..\public\inetmsghandler.h" />
+    <ClInclude Include="..\public\iserver.h" />
+    <ClInclude Include="..\public\ivscript.h" />
+    <ClInclude Include="..\public\bansystem.h" />
+    <ClInclude Include="..\public\model_types.h" />
+    <ClInclude Include="..\public\studio.h" />
+    <ClInclude Include="..\public\utility\binstream.h" />
+    <ClInclude Include="..\public\utility\httplib.h" />
+    <ClInclude Include="..\public\utility\memaddr.h" />
+    <ClInclude Include="..\public\utility\module.h" />
+    <ClInclude Include="..\public\utility\utility.h" />
+    <ClInclude Include="..\public\utility\vdf_parser.h" />
+    <ClInclude Include="..\public\worldsize.h" />
     <ClInclude Include="..\rtech\rtech_utils.h" />
     <ClInclude Include="..\rtech\rtech_game.h" />
     <ClInclude Include="..\rtech\rui\rui.h" />
@@ -527,10 +528,10 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="..\public\bansystem.cpp" />
-    <ClCompile Include="..\public\binstream.cpp" />
-    <ClCompile Include="..\public\memaddr.cpp" />
-    <ClCompile Include="..\public\module.cpp" />
-    <ClCompile Include="..\public\utility.cpp" />
+    <ClCompile Include="..\public\utility\binstream.cpp" />
+    <ClCompile Include="..\public\utility\memaddr.cpp" />
+    <ClCompile Include="..\public\utility\module.cpp" />
+    <ClCompile Include="..\public\utility\utility.cpp" />
     <ClCompile Include="..\rtech\rtech_utils.cpp" />
     <ClCompile Include="..\rtech\rtech_game.cpp" />
     <ClCompile Include="..\rtech\stryder\stryder.cpp" />
