--- a/r5dev/vproj/dedicated.vcxproj.filters
+++ b/r5dev/vproj/dedicated.vcxproj.filters
@@ -82,7 +82,7 @@
     <Filter Include="sdk\public">
       <UniqueIdentifier>{bbb7a170-37ae-4c76-b99a-8ebb924818ed}</UniqueIdentifier>
     </Filter>
-    <Filter Include="sdk\public\include">
+    <Filter Include="sdk\public">
       <UniqueIdentifier>{e1897f61-953e-4173-9c75-e59ca33929ea}</UniqueIdentifier>
     </Filter>
     <Filter Include="sdk\vpklib">
@@ -190,6 +190,9 @@
     <Filter Include="sdk\bonesetup">
       <UniqueIdentifier>{d49ec580-58c2-49e7-8e83-957da576febd}</UniqueIdentifier>
     </Filter>
+    <Filter Include="sdk\public\utility">
+      <UniqueIdentifier>{e0155821-8fb2-4fb6-aa6a-d3e6d980b64c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\common\opcodes.h">
@@ -240,17 +243,8 @@
     <ClInclude Include="..\networksystem\sm_protocol.h">
       <Filter>sdk\networksystem</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\httplib.h">
-      <Filter>sdk\public\include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\public\include\utility.h">
-      <Filter>sdk\public\include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\public\include\memaddr.h">
-      <Filter>sdk\public\include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\public\include\bansystem.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\bansystem.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
     <ClInclude Include="..\rtech\rtech_utils.h">
       <Filter>sdk\rtech</Filter>
@@ -594,9 +588,6 @@
     <ClInclude Include="..\vpklib\packedstore.h">
       <Filter>sdk\vpklib</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\binstream.h">
-      <Filter>sdk\public\include</Filter>
-    </ClInclude>
     <ClInclude Include="..\mathlib\adler32.h">
       <Filter>sdk\mathlib</Filter>
     </ClInclude>
@@ -792,11 +783,11 @@
     <ClInclude Include="..\game\server\ai_network.h">
       <Filter>sdk\game\server</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\edict.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\edict.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\globalvars_base.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\globalvars_base.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\gl_matsysiface.h">
       <Filter>sdk\engine</Filter>
@@ -828,8 +819,8 @@
     <ClInclude Include="..\squirrel\sqtype.h">
       <Filter>sdk\squirrel</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\inetchannel.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\inetchannel.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
     <ClInclude Include="..\tier1\utlmemory.h">
       <Filter>sdk\tier1</Filter>
@@ -864,9 +855,6 @@
     <ClInclude Include="..\vstdlib\keyvaluessystem.h">
       <Filter>sdk\vstdlib</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\module.h">
-      <Filter>sdk\public\include</Filter>
-    </ClInclude>
     <ClInclude Include="..\common\x86defs.h">
       <Filter>sdk\common</Filter>
     </ClInclude>
@@ -891,8 +879,8 @@
     <ClInclude Include="..\rtech\rui\rui.h">
       <Filter>sdk\rtech\rui</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\studio.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\studio.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\gl_model_private.h">
       <Filter>sdk\engine</Filter>
@@ -900,8 +888,8 @@
     <ClInclude Include="..\common\qlimits.h">
       <Filter>sdk\common</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\model_types.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\model_types.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
     <ClInclude Include="..\datacache\imdlcache.h">
       <Filter>sdk\datacache</Filter>
@@ -909,8 +897,8 @@
     <ClInclude Include="..\datacache\mdlcache.h">
       <Filter>sdk\datacache</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\const.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\const.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
     <ClInclude Include="..\tier0\threadtools.h">
       <Filter>sdk\tier0</Filter>
@@ -921,8 +909,8 @@
     <ClInclude Include="..\tier1\utldict.h">
       <Filter>sdk\tier1</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\client_class.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\client_class.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
     <ClInclude Include="..\datacache\idatacache.h">
       <Filter>sdk\datacache</Filter>
@@ -1062,8 +1050,8 @@
     <ClInclude Include="..\engine\packed_entity.h">
       <Filter>sdk\engine</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\inetmsghandler.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\inetmsghandler.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
     <ClInclude Include="..\tier1\mempool.h">
       <Filter>sdk\tier1</Filter>
@@ -1089,8 +1077,8 @@
     <ClInclude Include="..\engine\networkstringtable.h">
       <Filter>sdk\engine</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\iserver.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\iserver.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
     <ClInclude Include="..\tier0\dbg.h">
       <Filter>sdk\tier0</Filter>
@@ -1125,8 +1113,8 @@
     <ClInclude Include="..\tier0\platform_internal.h">
       <Filter>sdk\tier0</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\icommandline.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\icommandline.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
     <ClInclude Include="..\mathlib\noisedata.h">
       <Filter>sdk\mathlib</Filter>
@@ -1173,23 +1161,23 @@
     <ClInclude Include="..\tier0\memstd.h">
       <Filter>sdk\tier0</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\ivscript.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\ivscript.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\iconvar.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\iconvar.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\iconcommand.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\iconcommand.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\icvar.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\icvar.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
     <ClInclude Include="..\tier1\characterset.h">
       <Filter>sdk\tier1</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\worldsize.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\worldsize.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
     <ClInclude Include="..\tier1\utlblockmemory.h">
       <Filter>sdk\tier1</Filter>
@@ -1199,6 +1187,24 @@
     </ClInclude>
     <ClInclude Include="..\public\iengine.h">
       <Filter>sdk\public</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\utility\memaddr.h">
+      <Filter>sdk\public\utility</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\utility\module.h">
+      <Filter>sdk\public\utility</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\utility\utility.h">
+      <Filter>sdk\public\utility</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\utility\vdf_parser.h">
+      <Filter>sdk\public\utility</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\utility\binstream.h">
+      <Filter>sdk\public\utility</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\utility\httplib.h">
+      <Filter>sdk\public\utility</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -1235,9 +1241,6 @@
     <ClCompile Include="..\launcher\IApplication.cpp">
       <Filter>sdk\launcher</Filter>
     </ClCompile>
-    <ClCompile Include="..\public\utility.cpp">
-      <Filter>sdk\public</Filter>
-    </ClCompile>
     <ClCompile Include="..\public\bansystem.cpp">
       <Filter>sdk\public</Filter>
     </ClCompile>
@@ -1273,9 +1276,6 @@
     </ClCompile>
     <ClCompile Include="..\vpklib\packedstore.cpp">
       <Filter>sdk\vpklib</Filter>
-    </ClCompile>
-    <ClCompile Include="..\public\binstream.cpp">
-      <Filter>sdk\public</Filter>
     </ClCompile>
     <ClCompile Include="..\bsplib\bsplib.cpp">
       <Filter>sdk\bsplib</Filter>
@@ -1397,12 +1397,6 @@
     <ClCompile Include="..\vstdlib\keyvaluessystem.cpp">
       <Filter>sdk\vstdlib</Filter>
     </ClCompile>
-    <ClCompile Include="..\public\memaddr.cpp">
-      <Filter>sdk\public</Filter>
-    </ClCompile>
-    <ClCompile Include="..\public\module.cpp">
-      <Filter>sdk\public</Filter>
-    </ClCompile>
     <ClCompile Include="..\vstdlib\callback.cpp">
       <Filter>sdk\vstdlib</Filter>
     </ClCompile>
@@ -1504,6 +1498,18 @@
     </ClCompile>
     <ClCompile Include="..\tier1\splitstring.cpp">
       <Filter>sdk\tier1</Filter>
+    </ClCompile>
+    <ClCompile Include="..\public\utility\memaddr.cpp">
+      <Filter>sdk\public\utility</Filter>
+    </ClCompile>
+    <ClCompile Include="..\public\utility\module.cpp">
+      <Filter>sdk\public\utility</Filter>
+    </ClCompile>
+    <ClCompile Include="..\public\utility\utility.cpp">
+      <Filter>sdk\public\utility</Filter>
+    </ClCompile>
+    <ClCompile Include="..\public\utility\binstream.cpp">
+      <Filter>sdk\public\utility</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
