--- a/r5dev/vproj/clientsdk.vcxproj.filters
+++ b/r5dev/vproj/clientsdk.vcxproj.filters
@@ -118,7 +118,7 @@
     <Filter Include="sdk\public">
       <UniqueIdentifier>{b0696621-8658-4918-b0f2-ba20acc26829}</UniqueIdentifier>
     </Filter>
-    <Filter Include="sdk\public\include">
+    <Filter Include="sdk\public">
       <UniqueIdentifier>{cbe60970-f348-4a8b-8cee-d4cfebbe0d99}</UniqueIdentifier>
     </Filter>
     <Filter Include="sdk\tier2">
@@ -214,6 +214,12 @@
     <Filter Include="sdk\bonesetup">
       <UniqueIdentifier>{57e1f0c7-ce4f-4576-960e-0cd15b2b5092}</UniqueIdentifier>
     </Filter>
+    <Filter Include="sdk\public\bitmap">
+      <UniqueIdentifier>{84fdfada-64fe-4591-b639-431058a16686}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="sdk\public\utility">
+      <UniqueIdentifier>{91e5c68f-327d-446c-840d-5e7a53d9a631}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\client\cdll_engine_int.cpp">
@@ -242,9 +248,6 @@
     </ClCompile>
     <ClCompile Include="..\gameui\IConsole.cpp">
       <Filter>sdk\gameui</Filter>
-    </ClCompile>
-    <ClCompile Include="..\public\utility.cpp">
-      <Filter>sdk\public</Filter>
     </ClCompile>
     <ClCompile Include="..\rtech\rtech_utils.cpp">
       <Filter>sdk\rtech</Filter>
@@ -308,9 +311,6 @@
     </ClCompile>
     <ClCompile Include="..\vpklib\packedstore.cpp">
       <Filter>sdk\vpklib</Filter>
-    </ClCompile>
-    <ClCompile Include="..\public\binstream.cpp">
-      <Filter>sdk\public</Filter>
     </ClCompile>
     <ClCompile Include="..\bsplib\bsplib.cpp">
       <Filter>sdk\bsplib</Filter>
@@ -438,12 +438,6 @@
     <ClCompile Include="..\vstdlib\keyvaluessystem.cpp">
       <Filter>sdk\vstdlib</Filter>
     </ClCompile>
-    <ClCompile Include="..\public\memaddr.cpp">
-      <Filter>sdk\public</Filter>
-    </ClCompile>
-    <ClCompile Include="..\public\module.cpp">
-      <Filter>sdk\public</Filter>
-    </ClCompile>
     <ClCompile Include="..\vstdlib\callback.cpp">
       <Filter>sdk\vstdlib</Filter>
     </ClCompile>
@@ -567,6 +561,18 @@
     <ClCompile Include="..\tier1\splitstring.cpp">
       <Filter>sdk\tier1</Filter>
     </ClCompile>
+    <ClCompile Include="..\public\utility\memaddr.cpp">
+      <Filter>sdk\public\utility</Filter>
+    </ClCompile>
+    <ClCompile Include="..\public\utility\module.cpp">
+      <Filter>sdk\public\utility</Filter>
+    </ClCompile>
+    <ClCompile Include="..\public\utility\utility.cpp">
+      <Filter>sdk\public\utility</Filter>
+    </ClCompile>
+    <ClCompile Include="..\public\utility\binstream.cpp">
+      <Filter>sdk\public\utility</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\client\cdll_engine_int.h">
@@ -598,15 +604,6 @@
     </ClInclude>
     <ClInclude Include="..\gameui\IConsole.h">
       <Filter>sdk\gameui</Filter>
-    </ClInclude>
-    <ClInclude Include="..\public\include\httplib.h">
-      <Filter>sdk\public\include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\public\include\utility.h">
-      <Filter>sdk\public\include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\public\include\memaddr.h">
-      <Filter>sdk\public\include</Filter>
     </ClInclude>
     <ClInclude Include="..\rtech\rtech_utils.h">
       <Filter>sdk\rtech</Filter>
@@ -1016,9 +1013,6 @@
     <ClInclude Include="..\mathlib\parallel_for.h">
       <Filter>sdk\mathlib</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\stb_image.h">
-      <Filter>sdk\public\include</Filter>
-    </ClInclude>
     <ClInclude Include="..\squirrel\sqinit.h">
       <Filter>sdk\squirrel</Filter>
     </ClInclude>
@@ -1033,9 +1027,6 @@
     </ClInclude>
     <ClInclude Include="..\vpklib\packedstore.h">
       <Filter>sdk\vpklib</Filter>
-    </ClInclude>
-    <ClInclude Include="..\public\include\binstream.h">
-      <Filter>sdk\public\include</Filter>
     </ClInclude>
     <ClInclude Include="..\mathlib\adler32.h">
       <Filter>sdk\mathlib</Filter>
@@ -1226,11 +1217,11 @@
     <ClInclude Include="..\thirdparty\lzham\lzhamdecomp\lzham_lzdecompbase.h">
       <Filter>thirdparty\lzham\lzhamdecomp\include</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\edict.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\edict.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\globalvars_base.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\globalvars_base.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\gl_matsysiface.h">
       <Filter>sdk\engine</Filter>
@@ -1259,8 +1250,8 @@
     <ClInclude Include="..\squirrel\sqtype.h">
       <Filter>sdk\squirrel</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\inetchannel.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\inetchannel.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
     <ClInclude Include="..\tier1\utlvector.h">
       <Filter>sdk\tier1</Filter>
@@ -1298,9 +1289,6 @@
     <ClInclude Include="..\vstdlib\keyvaluessystem.h">
       <Filter>sdk\vstdlib</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\module.h">
-      <Filter>sdk\public\include</Filter>
-    </ClInclude>
     <ClInclude Include="..\common\x86defs.h">
       <Filter>sdk\common</Filter>
     </ClInclude>
@@ -1325,8 +1313,8 @@
     <ClInclude Include="..\windows\resource.h">
       <Filter>windows</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\studio.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\studio.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\gl_model_private.h">
       <Filter>sdk\engine</Filter>
@@ -1334,8 +1322,8 @@
     <ClInclude Include="..\common\qlimits.h">
       <Filter>sdk\common</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\model_types.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\model_types.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
     <ClInclude Include="..\game\client\enginesprite.h">
       <Filter>sdk\game\client</Filter>
@@ -1355,14 +1343,14 @@
     <ClInclude Include="..\public\avi\ibik.h">
       <Filter>sdk\public\avi</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\const.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\const.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\gl_rsurf.h">
       <Filter>sdk\engine</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\ivrenderview.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\ivrenderview.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
     <ClInclude Include="..\tier0\threadtools.h">
       <Filter>sdk\tier0</Filter>
@@ -1373,8 +1361,8 @@
     <ClInclude Include="..\tier1\utldict.h">
       <Filter>sdk\tier1</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\client_class.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\client_class.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
     <ClInclude Include="..\datacache\idatacache.h">
       <Filter>sdk\datacache</Filter>
@@ -1514,8 +1502,8 @@
     <ClInclude Include="..\engine\packed_entity.h">
       <Filter>sdk\engine</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\inetmsghandler.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\inetmsghandler.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
     <ClInclude Include="..\tier1\mempool.h">
       <Filter>sdk\tier1</Filter>
@@ -1571,8 +1559,8 @@
     <ClInclude Include="..\tier0\platform_internal.h">
       <Filter>sdk\tier0</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\icommandline.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\icommandline.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
     <ClInclude Include="..\mathlib\mathlib.h">
       <Filter>sdk\mathlib</Filter>
@@ -1619,8 +1607,8 @@
     <ClInclude Include="..\mathlib\transform.h">
       <Filter>sdk\mathlib</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\idebugoverlay.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\idebugoverlay.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
     <ClInclude Include="..\tier0\memstd.h">
       <Filter>sdk\tier0</Filter>
@@ -1628,44 +1616,44 @@
     <ClInclude Include="..\game\client\c_baseplayer.h">
       <Filter>sdk\game\client</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\iclientrenderable.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\iclientrenderable.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\iclientthinkable.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\iclientthinkable.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\iclientunknown.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\iclientunknown.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\ihandleentity.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\ihandleentity.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\iclientnetworkable.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\iclientnetworkable.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\icliententity.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\icliententity.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\ivscript.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\ivscript.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
     <ClInclude Include="..\game\client\view.h">
       <Filter>sdk\game\client</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\iconcommand.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\iconcommand.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\iconvar.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\iconvar.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
     <ClInclude Include="..\tier1\characterset.h">
       <Filter>sdk\tier1</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\worldsize.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\worldsize.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\include\icliententitylist.h">
-      <Filter>sdk\public\include</Filter>
+    <ClInclude Include="..\public\icliententitylist.h">
+      <Filter>sdk\public</Filter>
     </ClInclude>
     <ClInclude Include="..\tier1\utlblockmemory.h">
       <Filter>sdk\tier1</Filter>
@@ -1675,6 +1663,27 @@
     </ClInclude>
     <ClInclude Include="..\public\iengine.h">
       <Filter>sdk\public</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\bitmap\stb_image.h">
+      <Filter>sdk\public\bitmap</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\utility\binstream.h">
+      <Filter>sdk\public\utility</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\utility\httplib.h">
+      <Filter>sdk\public\utility</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\utility\memaddr.h">
+      <Filter>sdk\public\utility</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\utility\module.h">
+      <Filter>sdk\public\utility</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\utility\utility.h">
+      <Filter>sdk\public\utility</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\utility\vdf_parser.h">
+      <Filter>sdk\public\utility</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
