--- a/r5dev/vproj/gamesdk.vcxproj
+++ b/r5dev/vproj/gamesdk.vcxproj
@@ -93,10 +93,10 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="..\public\bansystem.cpp" />
-    <ClCompile Include="..\public\binstream.cpp" />
-    <ClCompile Include="..\public\memaddr.cpp" />
-    <ClCompile Include="..\public\module.cpp" />
-    <ClCompile Include="..\public\utility.cpp" />
+    <ClCompile Include="..\public\utility\binstream.cpp" />
+    <ClCompile Include="..\public\utility\memaddr.cpp" />
+    <ClCompile Include="..\public\utility\module.cpp" />
+    <ClCompile Include="..\public\utility\utility.cpp" />
     <ClCompile Include="..\rtech\rtech_utils.cpp" />
     <ClCompile Include="..\rtech\rtech_game.cpp" />
     <ClCompile Include="..\rtech\rui\rui.cpp" />
@@ -258,39 +258,39 @@
     <ClInclude Include="..\protoc\sv_rcon.pb.h" />
     <ClInclude Include="..\public\avi\iavi.h" />
     <ClInclude Include="..\public\avi\ibik.h" />
+    <ClInclude Include="..\public\bitmap\stb_image.h" />
     <ClInclude Include="..\public\iengine.h" />
-    <ClInclude Include="..\public\include\client_class.h" />
-    <ClInclude Include="..\public\include\const.h" />
-    <ClInclude Include="..\public\include\edict.h" />
-    <ClInclude Include="..\public\include\globalvars_base.h" />
-    <ClInclude Include="..\public\include\icliententity.h" />
-    <ClInclude Include="..\public\include\icliententitylist.h" />
-    <ClInclude Include="..\public\include\iclientnetworkable.h" />
-    <ClInclude Include="..\public\include\iclientrenderable.h" />
-    <ClInclude Include="..\public\include\iclientthinkable.h" />
-    <ClInclude Include="..\public\include\iclientunknown.h" />
-    <ClInclude Include="..\public\include\icommandline.h" />
-    <ClInclude Include="..\public\include\iconcommand.h" />
-    <ClInclude Include="..\public\include\iconvar.h" />
-    <ClInclude Include="..\public\include\icvar.h" />
-    <ClInclude Include="..\public\include\idebugoverlay.h" />
-    <ClInclude Include="..\public\include\ihandleentity.h" />
-    <ClInclude Include="..\public\include\inetchannel.h" />
-    <ClInclude Include="..\public\include\inetmsghandler.h" />
-    <ClInclude Include="..\public\include\iserver.h" />
-    <ClInclude Include="..\public\include\ivrenderview.h" />
-    <ClInclude Include="..\public\include\ivscript.h" />
-    <ClInclude Include="..\public\include\memaddr.h" />
-    <ClInclude Include="..\public\include\bansystem.h" />
-    <ClInclude Include="..\public\include\binstream.h" />
-    <ClInclude Include="..\public\include\httplib.h" />
-    <ClInclude Include="..\public\include\model_types.h" />
-    <ClInclude Include="..\public\include\module.h" />
-    <ClInclude Include="..\public\include\stb_image.h" />
-    <ClInclude Include="..\public\include\studio.h" />
-    <ClInclude Include="..\public\include\utility.h" />
+    <ClInclude Include="..\public\client_class.h" />
+    <ClInclude Include="..\public\const.h" />
+    <ClInclude Include="..\public\edict.h" />
+    <ClInclude Include="..\public\globalvars_base.h" />
+    <ClInclude Include="..\public\icliententity.h" />
+    <ClInclude Include="..\public\icliententitylist.h" />
+    <ClInclude Include="..\public\iclientnetworkable.h" />
+    <ClInclude Include="..\public\iclientrenderable.h" />
+    <ClInclude Include="..\public\iclientthinkable.h" />
+    <ClInclude Include="..\public\iclientunknown.h" />
+    <ClInclude Include="..\public\icommandline.h" />
+    <ClInclude Include="..\public\iconcommand.h" />
+    <ClInclude Include="..\public\iconvar.h" />
+    <ClInclude Include="..\public\icvar.h" />
+    <ClInclude Include="..\public\idebugoverlay.h" />
+    <ClInclude Include="..\public\ihandleentity.h" />
+    <ClInclude Include="..\public\inetchannel.h" />
+    <ClInclude Include="..\public\inetmsghandler.h" />
+    <ClInclude Include="..\public\iserver.h" />
+    <ClInclude Include="..\public\ivrenderview.h" />
+    <ClInclude Include="..\public\ivscript.h" />
+    <ClInclude Include="..\public\bansystem.h" />
+    <ClInclude Include="..\public\model_types.h" />
+    <ClInclude Include="..\public\studio.h" />
     <ClInclude Include="..\core\resource.h" />
-    <ClInclude Include="..\public\include\worldsize.h" />
+    <ClInclude Include="..\public\utility\binstream.h" />
+    <ClInclude Include="..\public\utility\httplib.h" />
+    <ClInclude Include="..\public\utility\memaddr.h" />
+    <ClInclude Include="..\public\utility\module.h" />
+    <ClInclude Include="..\public\utility\utility.h" />
+    <ClInclude Include="..\public\worldsize.h" />
     <ClInclude Include="..\rtech\rtech_utils.h" />
     <ClInclude Include="..\rtech\rtech_game.h" />
     <ClInclude Include="..\rtech\rui\rui.h" />
