Move 'bansystem' from 'public' to 'networksystem'

--- a/r5dev/vproj/dedicated.vcxproj.filters
+++ b/r5dev/vproj/dedicated.vcxproj.filters
@@ -243,9 +243,6 @@
     <ClInclude Include="..\networksystem\sm_protocol.h">
       <Filter>sdk\networksystem</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\bansystem.h">
-      <Filter>sdk\public</Filter>
-    </ClInclude>
     <ClInclude Include="..\rtech\rtech_utils.h">
       <Filter>sdk\rtech</Filter>
     </ClInclude>
@@ -1206,6 +1203,9 @@
     <ClInclude Include="..\public\utility\httplib.h">
       <Filter>sdk\public\utility</Filter>
     </ClInclude>
+    <ClInclude Include="..\networksystem\bansystem.h">
+      <Filter>sdk\networksystem</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\common\opcodes.cpp">
@@ -1240,9 +1240,6 @@
     </ClCompile>
     <ClCompile Include="..\launcher\IApplication.cpp">
       <Filter>sdk\launcher</Filter>
-    </ClCompile>
-    <ClCompile Include="..\public\bansystem.cpp">
-      <Filter>sdk\public</Filter>
     </ClCompile>
     <ClCompile Include="..\rtech\rtech_utils.cpp">
       <Filter>sdk\rtech</Filter>
@@ -1510,6 +1507,9 @@
     </ClCompile>
     <ClCompile Include="..\public\utility\binstream.cpp">
       <Filter>sdk\public\utility</Filter>
+    </ClCompile>
+    <ClCompile Include="..\networksystem\bansystem.cpp">
+      <Filter>sdk\networksystem</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
