--- a/r5dev/vproj/dedicated.vcxproj
+++ b/r5dev/vproj/dedicated.vcxproj
@@ -185,7 +185,7 @@
     <ClInclude Include="..\launcher\prx.h" />
     <ClInclude Include="..\materialsystem\cmaterialsystem.h" />
     <ClInclude Include="..\mathlib\adler32.h" />
-    <ClInclude Include="..\mathlib\bits.h" />
+    <ClInclude Include="..\mathlib\fbits.h" />
     <ClInclude Include="..\mathlib\color.h" />
     <ClInclude Include="..\mathlib\crc32.h" />
     <ClInclude Include="..\mathlib\fltx4.h" />
@@ -504,7 +504,7 @@
     <ClCompile Include="..\launcher\prx.cpp" />
     <ClCompile Include="..\mathlib\adler32.cpp" />
     <ClCompile Include="..\mathlib\almostequal.cpp" />
-    <ClCompile Include="..\mathlib\bits.cpp" />
+    <ClCompile Include="..\mathlib\fbits.cpp" />
     <ClCompile Include="..\mathlib\color_conversion.cpp" />
     <ClCompile Include="..\mathlib\crc32.cpp" />
     <ClCompile Include="..\mathlib\halton.cpp" />
