--- a/r5dev/vproj/gamesdk.vcxproj
+++ b/r5dev/vproj/gamesdk.vcxproj
@@ -69,7 +69,7 @@
     <ClCompile Include="..\materialsystem\cmaterialsystem.cpp" />
     <ClCompile Include="..\materialsystem\cshaderglue.cpp" />
     <ClCompile Include="..\mathlib\adler32.cpp" />
-    <ClCompile Include="..\mathlib\bits.cpp" />
+    <ClCompile Include="..\mathlib\fbits.cpp" />
     <ClCompile Include="..\mathlib\color_conversion.cpp" />
     <ClCompile Include="..\mathlib\crc32.cpp" />
     <ClCompile Include="..\mathlib\halton.cpp" />
@@ -228,7 +228,7 @@
     <ClInclude Include="..\materialsystem\cshaderglue.h" />
     <ClInclude Include="..\mathlib\adler32.h" />
     <ClInclude Include="..\mathlib\almostequal.cpp" />
-    <ClInclude Include="..\mathlib\bits.h" />
+    <ClInclude Include="..\mathlib\fbits.h" />
     <ClInclude Include="..\mathlib\color.h" />
     <ClInclude Include="..\mathlib\crc32.h" />
     <ClInclude Include="..\mathlib\float_tools.h" />
