--- a/r5dev/vproj/gamesdk.vcxproj.filters
+++ b/r5dev/vproj/gamesdk.vcxproj.filters
@@ -345,7 +345,7 @@
     <ClCompile Include="..\windows\system.cpp">
       <Filter>windows</Filter>
     </ClCompile>
-    <ClCompile Include="..\mathlib\bits.cpp">
+    <ClCompile Include="..\mathlib\fbits.cpp">
       <Filter>sdk\mathlib</Filter>
     </ClCompile>
     <ClCompile Include="..\tier0\commandline.cpp">
@@ -1100,7 +1100,7 @@
     <ClInclude Include="..\milessdk\win64_rrthreads.h">
       <Filter>sdk\milessdk</Filter>
     </ClInclude>
-    <ClInclude Include="..\mathlib\bits.h">
+    <ClInclude Include="..\mathlib\fbits.h">
       <Filter>sdk\mathlib</Filter>
     </ClInclude>
     <ClInclude Include="..\tier0\commandline.h">
