--- a/r5dev/vproj/dedicated.vcxproj
+++ b/r5dev/vproj/dedicated.vcxproj
@@ -221,6 +221,8 @@
     <ClInclude Include="..\public\iconcommand.h" />
     <ClInclude Include="..\public\iconvar.h" />
     <ClInclude Include="..\public\icvar.h" />
+    <ClInclude Include="..\public\ifile.h" />
+    <ClInclude Include="..\public\ifilesystem.h" />
     <ClInclude Include="..\public\inetchannel.h" />
     <ClInclude Include="..\public\inetmsghandler.h" />
     <ClInclude Include="..\public\iserver.h" />
@@ -415,6 +417,7 @@
     <ClInclude Include="..\thirdparty\spdlog\include\stopwatch.h" />
     <ClInclude Include="..\thirdparty\spdlog\include\tweakme.h" />
     <ClInclude Include="..\thirdparty\spdlog\include\version.h" />
+    <ClInclude Include="..\tier0\annotations.h" />
     <ClInclude Include="..\tier0\basetypes.h" />
     <ClInclude Include="..\tier0\commandline.h" />
     <ClInclude Include="..\tier0\commonmacros.h" />
